--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
   </body>
 
   <footer>
-    <blockquote cite="https://www.brainyquote.com/quotes/mitchell_kapor_163583">
     <!--  Date Accessed: 20180920 -->
-    <p><strong>"Getting information off the Internet is like taking a drink from a firehose."</strong>
-      <em><a href="https://www.brainyquote.com/quotes/mitchell_kapor_163583" target="_blank">- Michell Kapor</a></em></p>
-    <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
+    <p><strong>This is a test text.</strong>
+    <p>&copy Mahmoud Saleh 2018</p>
+
+
+    <!--Start of test clock-->
+  </head>
+
+  <body onload="startTime()">
+
+  <div id="txt"></div>
+
+  </body>
+  </html>
+  <!--End of test clock-->
+
   </footer>
 
 </html>
